static/css/base.css
/* -- Global/Template CSS styling -- */

body h1, h2, h3, h4, h5, h6, p, button, nav, form, .btn {
    font-family: 'Poppins', sans-serif;
}

body {
    height: calc(100vh - 290px);
}

.container-fluid {
    background-color: #38b000;
    color: #f8f9fa;
}

.buttons {
    background-color: #e63946;
    color: #f8f9fa;
    cursor: pointer;
    border-radius: .4rem;
}

.buttons:hover {
    background-color: #f8f9fa;
    color: #008000;
    border: 3px;
    border-color: #e63946;
    cursor: pointer;
}

.delivery-banner {
    background-color: #e63946;
}

.nav-logo {
    max-width: 300px;
}

.header-container {
    background-color: #38b000;
    margin: 0px;
    padding: 0px;
}

.card {
    color: #008000 !important;
    border-color: #ccff33 !important;
    border-width: 2px !important;
}

.card-footer {
    border-top: 0px;
}

.table {
    color: #008000;
}

/* -- END of Global/Template CSS styling --- */

/* -- Top, Main and Mobile navigation bars  -- */

#topnav {
    background-color: #008000;
    color: #f8f9fa;
}

#main-nav {
    background-color: #38b000;
    color: #f8f9fa;
}

#topnav a {
    color: #f8f9fa;
}

#topnav p 
#topnav i {
    color: #f8f9fa;
}

#main-nav {
    background-color: #38b000;
    color: #f8f9fa;
}

#main-nav ul li a {
    color: #f8f9fa;
}

.nav-link {
    color: #f8f9fa;
}

.nav-link:hover {
    color: #ccff33 !important; 
}

.nav-link:focus {
    color: #ccff33;
}

.cart-link {
    color: #ccff33;
}

.cart-link-empty {
    color: #f8f9fa;
}

.dropdown-menu {
    background-color: #008000;
    border-color: #ccff33;
    border-width: 1px;
    color: #f8f9fa;
}

.dropdown-item:focus,
.dropdown-item:hover {
    color: #008000 !important;
    background-color: #f8f9fa !important;
}

.header-search {
    width: 75%;
    margin-left: 4%;
}

.search-icon {
    color: #f8f9fa;
    background-color: #38b000;
}

.search-icon i {
    color: #f8f9fa;
}

.navbar-toggler-icon {
    background-color: #f8f9fa;
    color: #e63946;
}

.navbar-light
.navbar-toggler {
    background-color: #f8f9fa;
    color: #e63946;
    margin-left: 10px;
}

.navbar-toggler:focus {
    box-shadow: rgba(243,8,8,0.1) !important;
}

.navbar {
    background-color: #38b000;
}

/* -- END of Top, Main and Mobile navigation bars  -- */

/* -- Footer  -- */

.footer {
    color: #f8f9fa;
}

.footer-container {
    background-color: #008000;
}

/* -- END of Footer -- */

/* -- Homepage  -- */

.home-top-hero-div  {
    background: url('/media/remi-muller-LlHgaeBwYVE-unsplash-index-header.png') no-repeat center center fixed;
    background-size: cover;
    height: 400px;
    color: #f8f9fa;
    margin: auto;
}

.new-arrivals-card {
    background-color: #008000;
    color: #f8f9fa !important;
}

.new-arrivals-card .card img {
    max-height: 300px;
    max-width: 300px;
}

.home-welcome-card {
    background-color: #008000;
    color: #f8f9fa !important;
}

.home-promo-banner-robot {
    background: url('/media/husqvarna-promo-1.jpg') no-repeat center center;
    background-size: cover;
    height: 350px;
    color: #f8f9fa;
    margin: auto;
    z-index: 999;
}

.home-promo-banner-john-deere {
    background: url('/media/john-deere-promo-2.jpg') no-repeat center center;
    background-size: cover;
    height: 350px;
    color: #f8f9fa;
    margin: auto;
    z-index: 999;
}

.home-promo-banner-supersoil {
    background: url('/media/supersoil-promo-3.jpg') no-repeat center center;
    background-size: cover;
    height: 350px;
    color: #f8f9fa;
    margin: auto;
    z-index: 999;
}

.supersoil-banner-button {
    margin-top: 150px;
}

/* -- END of Homepage  -- */

/* -- Product Pages -- */

.all-products-header {
    color: #f8f9fa;
}

.all-products-header hr {
    width: 80%;
    margin: auto;
}

.sort-row {
    color: #f8f9fa;
}

.all-products-link {
    color: #f8f9fa;
}

.form-select {
    color: #008000;
}

.category-link {
    color: #008000;
}

.category-link:hover {
    color: #38b000;
}

.edit-product-button {
    background-color: #38b000;
    color: #f8f9fa;
    cursor: pointer;
    border-radius: .2rem;
}

.edit-product-button:hover {
    background-color: #e63946;
    color: #ccff33;
}

.delete-product-button {
    background-color: #38b000;
    color: #f8f9fa;
    cursor: pointer;
    border-radius: .2rem;
}

.delete-product-button:hover {
    background-color: #e63946;
    color: #ccff33;
}

/* -- END of Product Pages -- */

/* -- Cart & Checkout Pages -- */

.order-info {
    color: #e63946;
}

/* -- END of Cart & Checkout Pages -- */


.image-container {
    max-width: 400px;
    margin: auto;
}

.btt-link {
    cursor: pointer;
}

/* -- Bootstrap Toasts-- */

.message-box {
    position: absolute;
    top: 70px;
    right: 15px;
    z-index: 999;
}

.custom-toast {
    overflow: scroll;
}

.toast-capper {
    height: 2px;
}

/* -- from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ -- */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 10px solid transparent;
    border-right: 10px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 100px;
}

/* -- Convenience classes - colors copied from Bootstrap -- */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #ccff33 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* -- END of Bootstrap Toasts-- */

/* -------------------------------- Media Queries---------------- */

@media (max-width: 991px) {
    #main-nav ul {
        margin: 0px !important;
        padding-left: 25px;
        padding-bottom: 15px;
    }
}

@media (max-width: 991px) {
    .header-logo-link {
        margin-top: 0px;
        padding-top: 0px;
    }
}

@media (max-width: 991px) {
    .header-logo-link img {
        max-width: 150px;
}

@media (max-width: 991px) {
    .mobile-top-header {
        background-color: #008000;
    }
}

@media (max-width: 991px) {
    .navbar {
        background-color: #008000
    }
}

@media (max-width: 991px) {
    .product-detail-container {
        margin: 10px !important;
    }
}

@media (max-width: 991px) {
    .our-price-text {
        margin: 0px !important;
    }
}

@media (max-width: 991px) {
    .nav-link {
        margin: 0px;
        padding: 5px;
    }
}

@media (max-width: 991px) {
    .nav-link i {
        font-size: 21px;
    }
}

@media (max-width: 991px) {
    .mowers-dropdown-menu {
        width: 40% !important;
    }
}
}

